--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -4,7 +4,7 @@
 	"version": "0.1",
   	"manifest_version": 2,
   	"browser_action": {
-    	"default_icon": "icon.png",
+    	"default_icon": "img/icon.png",
     	"default_popup": "popup.html"
   	},
   	"permissions": [
@@ -15,8 +15,8 @@
     	"notifications"
   	],
   	"icons": {
-    	"16": "icon16.png",
-    	"48": "icon48.png",
-    	"128": "icon128.png"
+    	"16": "img/icon16.png",
+    	"48": "img/icon48.png",
+    	"128": "img/icon128.png"
   	}
 }
